--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,6 @@ spring:
           google:
             client-id: <todo>
             client-secret: <todo>
+          facebook:
+            client-id: <todo>
+            client-secret: <todo>
